<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_nav_maps"
        android:title="@string/nav_maps" />

    <!-- id stays nav_match to avoid rippling the rename through every tab
         screen's active-id argument; the label and icon are what changed. -->
    <item
        android:id="@+id/nav_match"
        android:icon="@drawable/ic_likes"
        android:title="@string/nav_match" />

    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/ic_nav_chats"
        android:title="@string/nav_chats" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>
